# challenge_Character_Statistics
challenge_Character_Statistics_src = [
    'src/charstats.c',
]
challenge_Character_Statistics = executable(
    'Character_Statistics',
    challenge_Character_Statistics_src,
    include_directories: [libcgc_inc],
    link_with: [libcgc],
    install_dir: install_path / 'bin',
    install: true
)
